--- a/styles.css
+++ b/styles.css
@@ -19,14 +19,14 @@ body{
     width: 300px;
 }
 .display{
+    display: flex;
+    flex-direction: column-reverse;
     grid-column-start: 1;
     grid-column-end: 5;
-    grid-row-start: -1;
-    grid-row-end: 0;
     padding: 8px;
     text-align: end;
     font-size: 32px;
-    height: 40px;
+    /* height: 40px; */
 }
 #zero{
     grid-column-start: 1;
