--- a/styles.css
+++ b/styles.css
@@ -33,13 +33,12 @@ body{
     grid-column-start: 1;
     grid-column-end: 3;
 }
+#alarmmsg{
+    position: relative;
+    height: 20px;
+    bottom: 20px;
+}
 .invisible{
     visibility: hidden;
 }
 
-span{
-    position: relative;
-    height: 10px;
-    bottom: 40px;
-    font-size: 24px;
-}
